第一章完结

--- a/快速搞定前端技术一面 匹配大厂面试要求.md
+++ b/快速搞定前端技术一面 匹配大厂面试要求.md
@@ -41,11 +41,71 @@
 
 ##   1-2 看了这节课你就知道该怎么准备面试了
 
-##   1-3 先来体验几个面试题
+### 关于面试
 
-##   1-4 如何搞定所有面试题
+- 基层工程师：基础知识
+- 高级工程师：基础知识+项目经验
+- 架构师：解决方案能力
+
+### 关于基础
+
+- 工程师的自我修养：基础知识
+- 扎实的基础能让你高效学习新技术
+
+##   1-3 面试题和分析
+
+### 题目-1
+
+1. `typeof` 能判断哪些类型？
+   - 考点：JS变量类型
+2. 何时使用`===`何时使用 `==`
+   - 考点：强制类型转换
+3. `window.onload` 和 `DOMContentLoaded` 的区别？
+   - 考点：页面加载过程
+
+### 题目-2
+
+1. JS创建10个`<a>`标签，点击的时候弹出对应的序号
+   - 考点：JS作用域
+2. 手写节流 `throttle`、防抖 `debounce` 
+   - 考点：性能、体验优化
+3. `Promise` 解决了什么问题？
+   - 考点：JS异步
+
+### 思考
+
+1. 拿到一个面试题，你第一时间看到的是什么？
+   - 拿到一个面试题，第一时间看到->**考点**
+2. 如何看待网上搜出来的永远做不完的题海？
+   - 如何看到做不完的题海->**不变应万变**（题可变，**考点**不变）
+3. 如何对待接下来遇到的面试题？
+   - 如何对待接下来的题目->题目到**知识点**，再到题目
+
+### 答案：
 
 ##   1-5 知识体系
+
+### 什么是知识体系？
+
+1. 高效学习三部曲：找准知识体系；刻意训练；及时反馈
+2. 知识体系：结构化的知识范围
+3. 涵盖所有知识点；结构化、有组织、易扩展
+
+### 从哪些方面梳理
+
+1. W3C标准
+2. ECMA262标准
+3. 开发环境
+4. 运行环境
+
+### 知识体系
+
+1. CSS基础知识
+2. JS基础语法
+3. JS-Web-API
+4. 开发环境
+5. 运行环境
+6. HTTP协议
 
 #  第2章 面试前的准备
 
@@ -54,19 +114,35 @@
 
 ##   2-1 面试之前需要准备你什么
 
+
+
 ##   2-2 投递简历的几种方式
+
+
 
 ##   2-3 面试的主要环节
 
+
+
 ##   2-4 JD分析-知己知彼（上）
+
+
 
 ##   2-5 JD分析-知己知彼（下）
 
+
+
 ##   2-6 如何写简历
+
+
 
 ##   2-7 简历案例分析
 
+
+
 ##   2-8 面试前的准备工作和注意事项
+
+
 
 #  第3章 CSS 面试题
 
